@@ -1,3 +1,8 @@
+2006-04-06  Andrew Cagney  <cagney@redhat.com>
+
+	* Makefile.am (frysk2333/a.out): Renamed from glibtimer/.
+	(glibtimer/gij.sh): Deleted.
+	
 2006-03-10  Phil Muldoon  <pmuldoon@redhat.com>
 
 	* glibtimer/TestGlibTimerGC.java: New. Added XFAIL that tests
